--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE HTML>
-<!DOCTYPE html>
 <html>
-<head>
-	<title>Multiplication Table</title>
-	<script type="text/javascript" src="java.js"></script>
-</head>
-<body>
-	<form> 
-    	<div style="float:left;margin-right:20px;">
-			<label for="rows" style="display: block; margin-left: 120px;">Rows</label>
-			<label style="float: none; display: inline-block; text-align: right;">Number</label>
-			<input type="Text" id="rows" name="rows">
-		</div>
-    	<div style="float:left;margin-right:20px;">
-			<label for="columns" style="display: block; margin-left: 60px;">Columns</label>
-			<input type="Text" id="columns" name="columns">
-		</div>
-		<button type="button" style="margin-top: 18px; background: transparent;" onclick="generate_table()">Show Tables</button>
-		<div style="margin-top: 20px;">
-			<label>Colors</label>
-			<button type="button" style="margin-left: 10px; width: 175px; height: 30px">Background Color</button>
-			<button type="button" style="margin-left: 11px; width: 175px; height: 30px">Text Color</button>
-		</div>
-	</form>
-	<section id="multiplication" style="margin-top: 30px;">
-	</section>
-</body>
+	<head>
+		<script src="java.js"> 
+		</script>
+	</head>
+	<body>
+		<section class="body">
+			<section>
+				<div id="number">
+					Number
+				</div>
+				<div id="input">
+					<label for="rows"> Rows </label>
+					<input type="text" id="rows">
+					<label for="columns"> Columns </label>
+					<input type="text" id="columns">
+					<button type="button" onclick="generateTable()"> Submit </button>
+				</div>
+			</section>
+			<section id="colors">
+				<div>
+					<input type="color" id="bgcolor">
+					<input type="color" id="txtcolor">
+				</div>
+				<div>
+					<button type="button" onclick="bgColorChange()"> Background Color </button>
+					<button type="button" onclick="txtColorChange()"> Text Color </button>
+				</div>
+			</section>
+			<section id="table" style='text-align:center;'>
+			</section>
+		</section>
+	</body>
 </html>
