--- a/index.html
+++ b/index.html
@@ -15,17 +15,13 @@
 					<input type="text" id="rows">
 					<label for="columns"> Columns </label>
 					<input type="text" id="columns">
-					<button type="button" onclick="generateTable()"> Submit </button>
+					<button type="button" onclick="generateTable()"> Show Table </button>
 				</div>
 			</section>
 			<section id="colors">
 				<div>
 					<input type="color" id="bgcolor">
 					<input type="color" id="txtcolor">
-				</div>
-				<div>
-					<button type="button" onclick="bgColorChange()"> Background Color </button>
-					<button type="button" onclick="txtColorChange()"> Text Color </button>
 				</div>
 			</section>
 			<section id="table" style='text-align:center;'>
